Chromatik: Use URIBuilder to build Chromatik query